--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_heatmap_calendar: ^1.0.5
+  flutter_launcher_icons: ^0.13.1
   flutter_slidable: ^3.0.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
@@ -39,6 +41,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.8
+
+fluttter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
