--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_heatmap_calendar: ^1.0.5
-  flutter_launcher_icons: ^0.13.1
   flutter_slidable: ^3.0.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
@@ -41,9 +40,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.8
+  flutter_launcher_icons: ^0.9.2
 
-fluttter_icons:
-  android: true
+
+flutter_icons:
+  android: "launcher_icon"
   ios: true
   image_path: "lib/assets/icon.png"
 
