--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   flutter_slidable: ^3.0.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
-  path_provider: ^2.1.2
+  path_provider: ^2.0.15
   provider: ^6.1.1
 
 dev_dependencies:
-  build_runner: ^2.4.8
-  flutter_launcher_icons: ^0.9.2
+  build_runner: ^2.4.13
+  flutter_launcher_icons: ^0.14.1
+  isar_generator: ^3.1.0+1
 
 
 flutter_icons:
